--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <!-- секція герой -->
         <section class="hero">
             <div class="container">
-                <h1 class="hero__title" data-aos="fade-left">Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="hero__btn" data-aos="zoom-out-down" data-modal-open>Замовити послугу</button>
+                <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
             </div>
         </section>
         <!-- секція функций -->
@@ -220,49 +220,44 @@
             </section>
             <section class="clients">
                 <div class="container">
-                    <h2 class="clients__title" data-aos="fade-up-left">Постійні клієнти</h2>
+                    <h2 class="clients__title">Постійні клієнти</h2>
                     <ul class="clients__list">
-                        <li class="clients__item" data-aos="flip-up">
+                        <li class="clients__item">
                             <a href="#" class="clients__link">
                                 <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#ya-co"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients__item" data-aos="flip-down">
+                        <li class="clients__item">
                             <a href="#" class="clients__link">
                                 <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#company"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients__item" data-aos="fade-up"
-                        data-aos-duration="3000">
+                        <li class="clients__item">
                             <a href="#" class="clients__link">
                                 <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#company-apple"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients__item" data-aos="fade-left"
-                        data-aos-anchor="#example-anchor"
-                        data-aos-offset="500"
-                        data-aos-duration="500">
+                        <li class="clients__item">
                             <a href="#" class="clients__link">
                                 <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#foster"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients__item" data-aos="fade-up"
-                        data-aos-anchor-placement="center-bottom">
+                        <li class="clients__item">
                             <a href="#" class="clients__link">
                                 <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#brand"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients__item" data-aos="flip-left">
+                        <li class="clients__item">
                             <a href="#" class="clients__link">
                                 <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#tag-line"></use>
