--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                         <li class="work__item" data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
                         data-aos-delay="300"
-                        data-aos-offset="0"><img class="work__img" src="./img/program.jpg" alt="program">
+                        data-aos-offset="0">
+                        <picture><source srcset="./img/deskstop/program@1x.webp, ./img/deskstop/program@2x.webp" media="(min-width: 1200px)" />
+                            <img class="work__img" src="./img/program.jpg" alt="program">
+                        </picture>
                             <div class="work__box">
                                 <h2 class="work__text">Десктопні додатки</h2>
                             </div>
@@ -110,7 +113,8 @@
                         <li class="work__item" data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
                         data-aos-delay="300"
-                        data-aos-offset="0"><img class="work__img" src="./img/computer.jpg" alt="computer">
+                        data-aos-offset="0"><picture><source srcset="./img/deskstop/computer@1x.webp, ./img/deskstop/computer@2x.webp" media="(min-width: 1200px)" />
+                            <img class="work__img" src="./img/computer.jpg" alt="computer"></picture>
                             <div class="work__box">
                                 <h2 class="work__text">Мобільні додатки</h2>
                             </div>
@@ -118,7 +122,8 @@
                         <li class="work__item" data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
                         data-aos-delay="300"
-                        data-aos-offset="0"><img class="work__img" src="./img/designer.jpg" alt="designer">
+                        data-aos-offset="0"><picture><source srcset="./img/deskstop/designer@1x.webp, ./img/deskstop/designer@2x.webp" media="(min-width: 1200px)">
+                            <img class="work__img" src="./img/designer.jpg" alt="designer"></picture>
                             <div class="work__box">
                                 <h2 class="work__text">Дизайнерські рішення</h2>
                             </div>
