--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         data-aos-easing="ease-in-back"
                         data-aos-delay="300"
                         data-aos-offset="0">
-                        <picture><source srcset="./img/deskstop/program@1x.webp, ./img/deskstop/program@2x.webp" media="(min-width: 1200px)" />
+                        <picture><source srcset="./img/deskstop/program@1x.webp 1x, ./img/deskstop/program@2x.webp 2x" media="(min-width: 1200px)" />
                             <img class="work__img" src="./img/program.jpg" alt="program">
                         </picture>
                             <div class="work__box">
@@ -113,7 +113,7 @@
                         <li class="work__item" data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
                         data-aos-delay="300"
-                        data-aos-offset="0"><picture><source srcset="./img/deskstop/computer@1x.webp, ./img/deskstop/computer@2x.webp" media="(min-width: 1200px)" />
+                        data-aos-offset="0"><picture><source srcset="./img/deskstop/computer@1x.webp 1x, ./img/deskstop/computer@2x.webp 2x" media="(min-width: 1200px)" />
                             <img class="work__img" src="./img/computer.jpg" alt="computer"></picture>
                             <div class="work__box">
                                 <h2 class="work__text">Мобільні додатки</h2>
@@ -122,7 +122,7 @@
                         <li class="work__item" data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
                         data-aos-delay="300"
-                        data-aos-offset="0"><picture><source srcset="./img/deskstop/designer@1x.webp, ./img/deskstop/designer@2x.webp" media="(min-width: 1200px)">
+                        data-aos-offset="0"><picture><source srcset="./img/deskstop/designer@1x.webp 1x, ./img/deskstop/designer@2x.webp 2x" media="(min-width: 1200px)">
                             <img class="work__img" src="./img/designer.jpg" alt="designer"></picture>
                             <div class="work__box">
                                 <h2 class="work__text">Дизайнерські рішення</h2>
@@ -137,7 +137,10 @@
                     <h2 class="team__title" data-aos="flip-left">Наша команда</h2>
                     <ul class="team__list">
                         <li class="team__item" data-aos="flip-right">
-                            <img width="270" class="team__img" src="./img/igor.jpg" alt="igor">
+                            <picture><source srcset="./img/deskstop/igor@1x.webp 1x, ./img/deskstop/igor@2x.webp 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/tablet/igortablet@1x.webp 1x, ./img/tablet/igortablet@2x.webp 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mobile/igormobile@1x.webp 1x, ./img/mobile/igormobile@2x.webp 2x" media="(max-width: 767px)">
+                                <img width="270" class="team__img" src="./img/igor.jpg" alt="igor"></picture>
                             <div class="team__box">
                             <h3 class="team__caption">Ігор Дем'яненко</h3>
                             <p class="team__text">Product Designer</p>
@@ -158,7 +161,12 @@
                         </ul>
                         </li>
                         <li class="team__item" data-aos="flip-right">
-                            <img width="270" class="team-img" src="./img/olga.jpg" alt="olga">
+                            <picture>
+                                <source srcset="./img/deskstop/olga@1x.webp 1x, ./img/deskstop/olga@2x.webp 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/tablet/olgatablet@1x.webp 1x, ./img/tablet/olgatablet@2x.webp 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mobile/olgamobile@1x.webp 1x, ./img/mobile/olgamobile@2x.webp 2x" media="(max-width: 767px)">
+                                <img width="270" class="team-img" src="./img/olga.jpg" alt="olga">
+                            </picture>
                             <div class="team__box">
                             <h3 class="team__caption">Ольга Рєпіна</h3>
                             <p class="team__text">Frontend Developer</p>
@@ -179,7 +187,12 @@
                             </ul>
                         </li>
                         <li class="team__item" data-aos="flip-right">
-                            <img width="270" class="team__img" src="./img/mukola.jpg" alt="mukola">
+                            <picture>
+                                <source srcset="./img/deskstop/mukola@1x.webp 1x, ./img/deskstop/mukola@2x.webp 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/tablet/mukolatablet@1x.webp 1x, ./img/tablet/mukolatablet@2x.webp 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mobile/mukola@1x.webp 1x, ./img/mobile/mukola@2x.webp 2x" media="(max-width: 767px)">
+                                <img width="270" class="team__img" src="./img/mukola.jpg" alt="mukola">
+                            </picture>
                             <div class="team__box">
                             <h3 class="team__caption">Микола Тарасов</h3>
                             <p class="team__text">Marketing</p>
@@ -200,7 +213,12 @@
                             </ul>
                         </li>
                         <li class="team__item" data-aos="flip-right">
-                            <img width="270" class="team__img" src="./img/muxaylo.jpg" alt="muxaylo">
+                            <picture>
+                                <source srcset="./img/deskstop/muxalo@1x.webp 1x, ./img/deskstop/muxalo@2x.webp 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/tablet/muxalotablet@1x.webp 1x, ./img/tablet/muxalotablet@2x.webp 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mobile/muxalo@1x.webp 1x, ./img/mobile/muxalo@2x.webp 2x" media="(max-width: 767px)">
+                                <img width="270" class="team__img" src="./img/muxaylo.jpg" alt="muxaylo">
+                            </picture>
                             <div class="team__box">
                             <h3 class="team__caption">Михайло Єрмаков</h3>
                             <p class="team__text">UI Designer</p>
