--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -69,7 +69,12 @@
             <ul class="portfolio__list">
                 <li class="services__item">
                 <div class="services__im">
-                    <img class="services__img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
+                    <picture>
+                        <source srcset="../img/deskstop/tekhnokryak@1x.webp 1x, ../img/deskstop/tekhnokryak@2x.webp 2x" media="(min-width: 1200px)">
+                        <source srcset="../img/tablet/tekhnokryak@1x.webp 1x, ../img/tablet/tekhnokryak@2x.webp 2x" media="(min-width: 768px)">
+                        <source srcset="../img/mobile/tekhnokryak@1x.webp 1x, ../img/mobile/tekhnokryak@2x.webp 2x" media="(max-width: 767px)">
+                        <img class="services__img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
+                    </picture>
                     <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                     <div class="services__box">
@@ -79,7 +84,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/new-orlean-vs-golden-star.jpg" alt="New Orlean vs Golden Star">
+                        <picture>
+                            <source srcset="../img/deskstop/new-orlean-vs-golden-star@1x.webp 1x, ../img/deskstop/new-orlean-vs-golden-star@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/new-orlean-vs-golden-star@1x.webp 1x, ../img/tablet/new-orlean-vs-golden-star@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/new-orlean-vs-golden-star@1x.webp 1x, ../img/mobile/new-orlean-vs-golden-star@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/new-orlean-vs-golden-star.jpg" alt="New Orlean vs Golden Star">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
@@ -89,7 +99,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/seafood.jpg" alt="Seafood">
+                        <picture>
+                            <source srcset="../img/deskstop/seafood@1x.webp 1x, ../img/deskstop/seafood@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/seafood@1x.webp 1x, ../img/tablet/seafood@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/seafood@1x.webp 1x, ../img/mobile/seafood@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/seafood.jpg" alt="Seafood">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
@@ -99,7 +114,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/prime.jpg" alt="Prime">
+                        <picture>
+                            <source srcset="../img/deskstop/prime@1x.webp 1x, ../img/deskstop/prime@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/prime@1x.webp 1x, ../img/tablet/prime@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/prime@1x.webp 1x, ../img/mobile/prime@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/prime.jpg" alt="Prime">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
