--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -129,7 +129,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/boxes.jpg" alt="Boxes">
+                        <picture>
+                            <source srcset="../img/deskstop/boxes@1x.webp 1x, ../img/deskstop/boxes@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/boxes@1x.webp 1x, ../img/tablet/boxes@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/boxes@1x.webp 1x, ../img/mobile/boxes@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/boxes.jpg" alt="Boxes">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
@@ -139,7 +144,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/inspiration-has-no-borders.jpg" alt="Borders">
+                        <picture>
+                            <source srcset="../img/deskstop/inspiration-has-no-borders@1x.webp 1x, ../img/deskstop/inspiration-has-no-borders@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/inspiration-has-no-borders@1x.webp 1x, ../img/tablet/inspiration-has-no-borders@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/inspiration-has-no-borders@1x.webp 1x, ../img/mobile/inspiration-has-no-borders@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/inspiration-has-no-borders.jpg" alt="Borders">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
@@ -149,7 +159,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/limited-edition.jpg" alt="edition">
+                        <picture>
+                            <source srcset="../img/deskstop/limited-edition@1x.webp 1x, ../img/deskstop/limited-edition@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/limited-edition@1x.webp 1x, ../img/tablet/limited-edition@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/limited-edition@1x.webp 1x, ../img/mobile/limited-edition@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/limited-edition.jpg" alt="edition">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
@@ -159,7 +174,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/lab.jpg" alt="LAB">
+                        <picture>
+                            <source srcset="../img/deskstop/lab@1x.webp 1x, ../img/deskstop/lab@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/lab@1x.webp 1x, ../img/tablet/lab@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/lab@1x.webp 1x, ../img/mobile/lab@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/lab.jpg" alt="LAB">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
@@ -169,7 +189,12 @@
                 </li>
                 <li class="services__item">
                     <div class="services__im">
-                        <img class="services__img" src="../img/growing-business.jpg" alt="Business">
+                        <picture>
+                            <source srcset="../img/deskstop/growing-business@1x.webp 1x, ../img/deskstop/growing-business@2x.webp 2x" media="(min-width: 1200px)">
+                            <source srcset="../img/tablet/growing-business@1x.webp 1x, ../img/tablet/growing-business@2x.webp 2x" media="(min-width: 768px)">
+                            <source srcset="../img/mobile/growing-business@1x.webp 1x, ../img/mobile/growing-business@2x.webp 2x" media="(max-width: 767px)">
+                            <img class="services__img" src="../img/growing-business.jpg" alt="Business">
+                        </picture>
                         <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services__box">
