--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -24,8 +24,8 @@
                     </svg>
                     </button>
                 <ul class="nav">
-                    <li class="nav__item"><a class="nav__link" href=".../index.html">Студія</a></li>
-                    <li class="nav__item"><a class="nav__link current" href=".../pages/portfolio.html">Портфоліо</a></li>
+                    <li class="nav__item"><a class="nav__link" href="../index.html">Студія</a></li>
+                    <li class="nav__item"><a class="nav__link current" href="../pages/portfolio.html">Портфоліо</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">Контакти</a></li>
                 </ul>
             </nav>
