--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
                     <h2 class="team__title" data-aos="flip-left">Наша команда</h2>
                     <ul class="team__list">
                         <li class="team__item" data-aos="flip-right">
-                            <picture><source srcset="./img/deskstop/igor@1x.webp 1x, ./img/deskstop/igor@2x.webp 2x" media="(min-width: 1200px)">
+                            <picture>
+                                <source srcset="./img/deskstop/igor@1x.webp 1x, ./img/deskstop/igor@2x.webp 2x" media="(min-width: 1200px)">
                                 <source srcset="./img/tablet/igortablet@1x.webp 1x, ./img/tablet/igortablet@2x.webp 2x" media="(min-width: 768px)">
                                 <source srcset="./img/mobile/igormobile@1x.webp 1x, ./img/mobile/igormobile@2x.webp 2x" media="(max-width: 767px)">
-                                <img width="270" class="team__img" src="./img/igor.jpg" alt="igor"></picture>
+                                <img width="270" class="team__img" src="./img/igor.jpg" alt="igor">
+                            </picture>
                             <div class="team__box">
                             <h3 class="team__caption">Ігор Дем'яненко</h3>
                             <p class="team__text">Product Designer</p>
